...
        android:layout_height="match_parent"
        android:layout_below="@id/app"
        android:layout_marginBottom="100dp"
        >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:background="@color/rosso"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/tableRow0"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RelativeLayout
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:onClick="vaiattivita"
                    android:background="@drawable/pulsantimenu"
                    android:layout_weight="1">

...
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:background="@drawable/pulsantimenu"
                android:layout_weight="1" >

                <RelativeLayout
                    android:id="@+id/button3"
                    android:layout_height="fill_parent"
                    android:onClick="vaiattivita"
                    android:layout_weight="1" >
                    <RelativeLayout
                        android:id="@+id/button3a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="vaiattivita"
                        android:layout_centerInParent="true"
                        >

...
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/inserimento"
                            android:onClick="vaiattivita"
                            android:alpha="0.5"
                            android:id="@+id/button3b"
                            >
                        </Button>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
